--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Docbook_VHDLTool"]
+[submodule "stylesheets/docbook"]
 	path = stylesheets/docbook
-	url = https://github.com/carlm-org/docbook
+	url = https://github.com/carlm-org/docbook.git
