--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "stylesheets/docbook"]
 	path = stylesheets/docbook
-	url = https://github.com/carlm-org/docbook.git
+	url = https://github.com/VHDLTool/docbook
