Handbook project example including a custom handbook CNE.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src_handbook/STD"]
 	path = src_handbook/STD
 	url = https://github.com/VHDLTool/VHDL_Handbook_STD
+[submodule "src_handbook/CNE"]
+	path = src_handbook/CNE
+	url = https://github.com/VHDLTool/VHDL_Handbook_CNE.git
