--- a/.gitmodules
+++ b/.gitmodules
@@ -3,5 +3,5 @@
 	url = https://github.com/VHDLTool/VHDL_Handbook_STD
 [submodule "src_handbook/CNE"]
 	path = src_handbook/CNE
-	url = https://github.com/VHDLTool/VHDL_Handbook_CNE.git
+	url = https://github.com/VHDLTool/VHDL_Handbook_CNE
 	branch = CNE
